Fix podcast images

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 name: 'The Cybersecurity Librarian'
-description: 'Cataloguing Threats, Classifying Risks, and Building Literacy'
+description: 'Cataloguing Threats, Classifying Risks, and Building Security Literacy'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 lang: en-us
