Added new links for michael

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,9 @@ authors:
       twitter:        https://twitter.com/_cyberlibrarian
       linkedin:       https://linkedin.com/in/itpromichael
       site:           https://linkedin.com/in/itpromichael
-      youtube:        https://www.youtube.com/channel/UC0knSd6A0GsnA7jlVdc-pGA/
+      github:         https://github.com/cyberlibrarian
+      mastodon:       https://infosec.exchange/@cyberlibrarian
+      youtube:        https://www.youtube.com/c/cyberlibrarian
       avatar:         assets/images/IMG_0515a.png
       bio:            "Michael McDonnell is The Cybersecurity Librarian. A cybersecurity professional (CISM, CTIA, GCIA, GCWN) and a professional librarian (MLIS)."
  
