--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,8 @@ authors:
       name:           Michael McDonnell
       short-name:     michael
       email:          michael@cyberlibrarian.ca
-      twitter:        https://twitter.com/_cyberlibrarian
       linkedin:       https://linkedin.com/in/itpromichael
-      site:           https://linkedin.com/in/itpromichael
+      site:           https://cyberlibrarian.ca
       github:         https://github.com/cyberlibrarian
       mastodon:       https://infosec.exchange/@cyberlibrarian
       youtube:        https://www.youtube.com/c/cyberlibrarian
