--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ email: 'michael@cyberlibrarian.ca'
 github_username: 'cyberlibrarian'
 baseurl: ''
 url: 'https://cyberlibrarian.ca'
+include: [_pages]
 
 # Syntax
 markdown: kramdown
@@ -17,7 +18,6 @@ plugins:
   - jekyll-feed
 #  - jekyll-sitemap
 #  - jekyll-remote-theme
-  
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -36,19 +36,6 @@ plugins:
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 lang: en-us
-
-defaults:
-  - scope:
-      path: "_posts"
-    values:
-      layout: post
-      author: cyberlibrarian
-      avatar: assets/images/IMG_0515a.png
-  - scope:
-      path: "_pages"
-    values:
-      layout: page
-
 
 authors:
     michael:
