--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,19 @@ email: 'michael@cyberlibrarian.ca'
 github_username: 'cyberlibrarian'
 baseurl: ''
 url: 'https://cyberlibrarian.ca'
-include: [_pages]
+show_excerpts: true
+
+# minima
+minima:
+    social_links:
+      - { platform: github, user_url: "https://github.com/cyberlibrarian" }
+      - { platform: mastodon, user_url: "https://infosec.exchange/@cyberlibrarian" }
+      - { platform: linkedin, user_url: "https://linkedin.com/in/itpromichael" }
+      - { platform: youtube, user_url: "https://www.youtube.com/c/cyberlibrarian" }
+
+header_pages:
+    - learning.md
+    - moro-and-mike.html
 
 # Syntax
 markdown: kramdown
@@ -37,27 +49,9 @@ logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 lang: en-us
 
-authors:
-    michael:
-      name:           Michael McDonnell
-      short-name:     michael
-      email:          michael@cyberlibrarian.ca
-      linkedin:       https://linkedin.com/in/itpromichael
-      site:           https://cyberlibrarian.ca
-      github:         https://github.com/cyberlibrarian
-      mastodon:       https://infosec.exchange/@cyberlibrarian
-      youtube:        https://www.youtube.com/c/cyberlibrarian
-      avatar:         assets/images/IMG_0515a.png
-      bio:            "Michael McDonnell is The Cybersecurity Librarian. A cybersecurity professional (CISM, CTIA, GCIA, GCWN) and a professional librarian (MLIS)."
- 
-    moro:
-      name:           Morohito Arakaki
-      short-name:     moro
-      email:          michael@cyberlibrarian.ca
-      linkedin:       https://linkedin.com/in/moroarakaki
-      site:           https://linkedin.com/in/moroarakaki
-      youtube:        https://www.youtube.com/channel/UC0knSd6A0GsnA7jlVdc-pGA/
-      avatar:         assets/images/moro-yellow-transparent1.png
-      bio:            "Moro is a modern day rennaissance man, an experienced network analyst, and cybersecurity professional. He is co-host of the Moro & Mike livestream."
-      
- 
+author:
+  name:           "Michael McDonnell"
+  email:          michael@cyberlibrarian.ca
+  short-name:     michael
+  avatar:         assets/images/IMG_0515a.png
+  bio:            "Michael McDonnell is The Cybersecurity Librarian. A cybersecurity professional (CISM, CTIA, GCIA, GCWN) and a professional librarian (MLIS)."
