customized minima template

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: ''
 url: 'https://cyberlibrarian.ca'
 show_excerpts: true
 logo: 'assets/images/logo.png'
-paginate: true
+paginate: 5
   
 # custom Variables for my site
 logo: 'assets/images/logo.png'
@@ -49,6 +49,7 @@ theme: 'minima'
 # Plugins
 plugins: 
   - jekyll-feed
+  - jekyll-paginate
   - jekyll-sitemap
 #  - jekyll-remote-theme
 
