--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ minima:
       - { platform: mastodon, user_url: "https://infosec.exchange/@cyberlibrarian" }
       - { platform: linkedin, user_url: "https://linkedin.com/in/itpromichael" }
       - { platform: youtube, user_url: "https://www.youtube.com/c/cyberlibrarian" }
+      - { platform: mastodon, user_url: "https://birds.town/@cyberlibrarian" }
 
 header_pages:
     - _pages/learning.md
